--- a/calendar.html
+++ b/calendar.html
@@ -44,6 +44,8 @@
 
 <body onload="init();">
     <script>
+        first_day = 2;
+
         function update_month() {
             data = document.getElementById('input_month').value;
 
