--- a/calendar.html
+++ b/calendar.html
@@ -158,6 +158,36 @@
                     }, 10);
             }
         }
+        if (first_day > 1) {
+            setInterval(function () {
+                document.getElementById(1).innerHTML = ".";
+            }, 10);
+            if (first_day > 2) {
+                setInterval(function () {
+                    document.getElementById(2).innerHTML = ".";
+                }, 10);
+                if (first_day > 3) {
+                    setInterval(function () {
+                        document.getElementById(3).innerHTML = ".";
+                    }, 10);
+                    if (first_day > 4) {
+                        setInterval(function () {
+                            document.getElementById(4).innerHTML = ".";
+                        }, 10);
+                        if (first_day > 5) {
+                            setInterval(function () {
+                                document.getElementById(5).innerHTML = ".";
+                            }, 10);
+                            if (first_day > 6) {
+                                setInterval(function () {
+                                    document.getElementById(6).innerHTML = ".";
+                                }, 10);
+                            }
+                        }
+                    }
+                }
+            }
+        }
 
         //document.getElementById(13).style = "background-color:MediumPurple";
     </script>
