--- a/calendar.html
+++ b/calendar.html
@@ -38,7 +38,7 @@
 
             setInterval(function () {
 
-                document.getElementById(1).innerHTML = "";
+                document.getElementById(`${1}`).innerHTML = "";
 
             }, 10000);
 
@@ -1022,6 +1022,9 @@
                 </tr>
 
                 <tr>
+
+
+
 
                     <td id="36"></td>
 
