--- a/calendar.html
+++ b/calendar.html
@@ -38,7 +38,7 @@
 
             setInterval(function () {
 
-                document.getElementById(`${1}`).innerHTML = "";
+                document.getElementById(1).innerHTML = "";
 
             }, 10000);
 
@@ -1026,6 +1026,7 @@
 
 
 
+
                     <td id="36"></td>
 
                     <td id="37"></td>
@@ -1045,5 +1046,9 @@
             </table>
 
 </body>
+
+
+
+
 
 </html>
