--- a/calendar.html
+++ b/calendar.html
@@ -35,514 +35,14 @@
         var days = 0;
 
         function reset() {
-
-            setInterval(function () {
-
-                document.getElementById(1).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(2).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(3).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(4).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(5).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(6).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(7).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(8).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(9).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(10).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(11).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(12).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(13).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(14).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(15).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(16).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(17).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(18).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(19).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(20).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(21).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(22).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(23).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(24).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(25).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(26).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(27).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(28).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(29).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(30).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(31).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(32).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(33).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(34).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(35).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(36).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(37).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(38).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(39).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(40).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(41).innerHTML = "";
-
-            }, 10000);
-
-            setInterval(function () {
-
-                document.getElementById(42).innerHTML = "";
-
-            }, 10000);
-
-
-
-            setInterval(function () {
-
-                document.getElementById(1).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(2).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(3).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(4).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(5).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(6).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(7).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(8).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(9).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(10).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(11).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(12).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(13).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(14).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(15).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(16).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(17).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(18).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(19).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(20).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(21).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(22).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(23).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(24).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(25).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(26).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(27).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(28).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(29).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(30).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(31).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(32).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(33).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(34).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(35).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(36).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(37).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(38).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(39).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(40).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(41).style = "background-color:Lavender";
-
-            }, 100);
-
-            setInterval(function () {
-
-                document.getElementById(42).style = "background-color:Lavender";
-
-            }, 100);
-
-
+            for (var i = 0; i < 42; i++) {
+                setInterval(function () {
+                    document.getElementById(`${i + 1}`).innerHTML = "";
+                }, 10)
+                setInterval(function () {
+                    document.getElementById(`${i + 1}`).style = "background-color:Lavender";
+                }, 10)
+            }
 
             if (month == current_datetime.getMonth() && year == current_datetime.getFullYear())
 
@@ -699,178 +199,6 @@
                     document.getElementById(`${i + first_day}`).innerHTML = i + 1;
                 }, 10)
             }
-
-
-
-            /* Temporaty version (uncorrect work with using while or for) *
-
-            setInterval(function () {
-
-                document.getElementById(0 + first_day).innerHTML = 1;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(1 + first_day).innerHTML = 2;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(2 + first_day).innerHTML = 3;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(3 + first_day).innerHTML = 4;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(4 + first_day).innerHTML = 5;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(5 + first_day).innerHTML = 6;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(6 + first_day).innerHTML = 7;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(7 + first_day).innerHTML = 8;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(8 + first_day).innerHTML = 9;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(9 + first_day).innerHTML = 10;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(10 + first_day).innerHTML = 11;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(11 + first_day).innerHTML = 12;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(12 + first_day).innerHTML = 13;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(13 + first_day).innerHTML = 14;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(14 + first_day).innerHTML = 15;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(15 + first_day).innerHTML = 16;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(16 + first_day).innerHTML = 17;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(17 + first_day).innerHTML = 18;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(18 + first_day).innerHTML = 19;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(19 + first_day).innerHTML = 20;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(20 + first_day).innerHTML = 21;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(21 + first_day).innerHTML = 22;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(22 + first_day).innerHTML = 23;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(23 + first_day).innerHTML = 24;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(24 + first_day).innerHTML = 25;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(25 + first_day).innerHTML = 26;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(26 + first_day).innerHTML = 27;
-
-            }, 10);
-
-            setInterval(function () {
-
-                document.getElementById(27 + first_day).innerHTML = 28;
-
-            }, 10); */
 
             if (NumOfDays[month] > 28) {
 
