--- a/calendar.html
+++ b/calendar.html
@@ -28,7 +28,7 @@
 
         var NumOfDays = [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31];
 
-        var first_day;;
+        var first_day;
 
         var first_day_year;
 
