--- a/calendar.html
+++ b/calendar.html
@@ -220,7 +220,7 @@
 
                     }, 10);
 
-                    if (NumOfDays[month] > 30)
+                    if (NumOfDays[month] == 31)
 
                         setInterval(function () {
 
