--- a/calendar.html
+++ b/calendar.html
@@ -36,11 +36,8 @@
 
 
         function set() {
-            setInterval(function () {
+            document.getElementById(`${0 + first_day}`).innerHTML = 1;
 
-                document.getElementById(0 + first_day).innerHTML = 1;
-
-            }, 0);
 
             setInterval(function () {
 
