--- a/calendar.html
+++ b/calendar.html
@@ -733,8 +733,8 @@
 
             }, 0); */
 
-            for (let i = 0; i < 42; i++) {
-                document.getElementById(`${i + 2}`).innerHTML = "";
+            for (var i = 0; i < 42; i++) {
+                document.getElementById(`${i + first_day}`).innerHTML = "A";
                 document.getElementById(`${i + 1}`).style = "background-color:Lavender";
             }
 
