--- a/calendar.html
+++ b/calendar.html
@@ -734,7 +734,7 @@
             }, 0); */
 
             for (var i = 0; i < 42; i++) {
-                document.getElementById(`${i + first_day}`).innerHTML = "A";
+                document.getElementById(`${i + 1}`).innerHTML = "";
                 document.getElementById(`${i + 1}`).style = "background-color:Lavender";
             }
 
