--- a/calendar.html
+++ b/calendar.html
@@ -779,9 +779,9 @@
 
                 year = current_datetime.getFullYear();
 
-            for (var i = 0; i < math.abs(oldyear - year); i++) {
+            for (var i = 0; i < Math.abs(oldyear - year); i++) {
 
-                if ((min(oldyear, year) + i) % 4 == 0 && (math.min(oldyear, year) + i) % 100 != 0)
+                if ((min(oldyear, year) + i) % 4 == 0 && (Math.min(oldyear, year) + i) % 100 != 0)
 
                     years += 366;
 
