--- a/calendar.html
+++ b/calendar.html
@@ -781,7 +781,7 @@
 
             for (var i = 0; i < Math.abs(oldyear - year); i++) {
 
-                if ((min(oldyear, year) + i) % 4 == 0 && (Math.min(oldyear, year) + i) % 100 != 0)
+                if ((Math.min(oldyear, year) + i) % 4 == 0 && (Math.min(oldyear, year) + i) % 100 != 0)
 
                     years += 366;
 
