--- a/calendar.html
+++ b/calendar.html
@@ -92,6 +92,7 @@
         }
 
         function update_year() {
+            years = 0;
             data = document.getElementById('input_year').value;
 
             oldyear = current_datetime.getFullYear();
@@ -195,9 +196,6 @@
 
             reset();
             set();
-
-            /* Temporaty version (uncorrect work with using while or for) */
-
         }
     </script>
 
