--- a/calendar.html
+++ b/calendar.html
@@ -136,7 +136,7 @@
 
                 first_day_year += 7;
 
-            first_day = (first_day_year + Shift[1] + 1) % 7;
+            first_day = (first_day_year + Shift[month] + 1) % 7;
 
             if (first_day == 0)
 
