--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/calendar.html';">Calendar</button>
             </td>
         </tr>
+        <tr>
+            <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/quiz0.html';">Daily quiz 0</button>
+            </td>
+        </tr>
     </table>
     <h6>I am footer... Footer and anything else... </h6>
 </body>
