--- a/quiz0.html
+++ b/quiz0.html
@@ -7,7 +7,7 @@
 
     <script type="text/javascript">
 
-        function initShaders() {
+        function read() {
             var text;
             var url = 'quiz0_input.txt';
 
@@ -23,17 +23,13 @@
                 });
         }
 
-
-
-
-
     </script>
 
 
 </head>
 
 
-<body onload="webGLStart();">
+<body onload="read();">
     <script>
     </script>
 </body>
