--- a/quiz0.html
+++ b/quiz0.html
@@ -19,8 +19,9 @@
                     if (input == null) {
                         alert("Could not download input file");
                     }
-                    return input;
+                    text = input;
                 });
+            return text;
         }
 
         function search() {
