--- a/quiz0.html
+++ b/quiz0.html
@@ -7,10 +7,14 @@
 
     <script type="text/javascript">
 
+        function print(a) {
+            alert(a);
+        }
+
         function read() {
             var text;
             var url = 'quiz0_input.txt';
-
+            var i = 0;
             fetch(url)
                 .then(response => {
                     return response.text();
@@ -19,13 +23,10 @@
                     if (input == null) {
                         alert("Could not download input file");
                     }
-                    text = input;
-                });
-            return text;
-        }
+                    print(input);
 
-        function search() {
-            alert(read());
+
+                });
         }
 
     </script>
@@ -34,7 +35,7 @@
 </head>
 
 
-<body onload="search();">
+<body onload="read();">
     <script>
     </script>
 </body>
