--- a/quiz0.html
+++ b/quiz0.html
@@ -14,7 +14,7 @@
 
             while (text[i] != '\n')
                 i++;
-            n = slice(0, i + 1);
+            n = parseInt(text.slice(0, i + 1));
             alert(n);
         }
 
