--- a/quiz0.html
+++ b/quiz0.html
@@ -15,10 +15,11 @@
             while (text[i] != '\n')
                 i++;
             n = parseInt(text.slice(0, i + 1));
+            i += 2;
             j = i;
             while (text[i] != '\n')
                 i++;
-            k = parseInt(text.slice(j + 2, i + 1));
+            k = parseInt(text.slice(j, i + 1));
             alert(n);
             alert(k);
         }
