--- a/quiz0.html
+++ b/quiz0.html
@@ -14,12 +14,12 @@
 
             while (text[i] != '\n')
                 i++;
-            n = parseInt(text.slice(0, i + 1));
-            i += 2;
+            n = parseInt(text.slice(0, i));
+            i++;
             j = i;
             while (text[i] != '\n')
                 i++;
-            k = parseInt(text.slice(j, i + 1));
+            k = parseInt(text.slice(j, i));
             alert(n);
             alert(k);
         }
