--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </td>
         </tr>
     </table>
-    <h6>I am footer... Footer and anything else... </h6>
+    <h6>I am footer... Footer and nothing else... </h6>
 </body>
 
 </html>
