--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
             <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/quiz0.html';">Daily quiz 0</button>
             </td>
         </tr>
+        <tr>
+            <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/server.html';">Daily quiz 0</button>
+            </td>
+        </tr>
     </table>
     <h6>I am footer... Footer and nothing else... </h6>
 </body>
