--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </td>
         </tr>
         <tr>
-            <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/server.html';">Daily quiz 0</button>
+            <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/server.html';">Server</button>
             </td>
         </tr>
     </table>
