--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <style>
         button:hover {
-            color: MediumPurple;
+            color: White;
         }
 
         h6 {
@@ -19,7 +19,7 @@
 
 <body onload="webGLStart();">
     <h1> My projects) </h1>
-    <hr color=MediumPurple size="4">
+    <hr color=Black size="4">
     <p><img src="https://secure.gravatar.com/avatar/84f947d12ceee2d3dc956c02d23f9b5f" width="50" height="50"
             alt="Пример"></p>
     <br><br>
