--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             bottom: 0;
             padding: 10px;
         }
+
+        #intro {
+            text-align: right;
+            margin-left: 70%;
+        }
     </style>
 </head>
 
@@ -23,6 +28,9 @@
     <p><img src="https://secure.gravatar.com/avatar/84f947d12ceee2d3dc956c02d23f9b5f" width="50" height="50"
             alt="Пример"></p>
     <br><br>
+
+    <p id="intro"> I love Aquarium very much. I hope, you too. Of course, went here to see my works, but I think, that
+        you should see BG's fotos too. I hope, you enjoy it))) </p>
 
     <table>
         <tr>
