--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
             padding: 10px;
         }
 
-        #intro {
-            text-align: right;
-            margin-left: 70%;
+        body {
+            background-image: url(http://printogolik.ru/upload/content/0/1/32/93/73293_478_1.jpg);
         }
     </style>
 </head>
@@ -28,9 +27,6 @@
     <p><img src="https://secure.gravatar.com/avatar/84f947d12ceee2d3dc956c02d23f9b5f" width="50" height="50"
             alt="Пример"></p>
     <br><br>
-
-    <p id="intro"> I love Aquarium very much. I hope, you too. Of course, went here to see my works, but I think, that
-        you should see BG's fotos too. I hope, you enjoy it))) </p>
 
     <table>
         <tr>
