--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         body {
             background-image: url(http://printogolik.ru/upload/content/0/1/32/93/73293_478_1.jpg);
+            background-size: 100%;
         }
     </style>
 </head>
