--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 
-<body onload="webGLStart();">
+<body>
     <h1> My projects) </h1>
     <hr color=Black size="4">
     <p><img src="https://secure.gravatar.com/avatar/84f947d12ceee2d3dc956c02d23f9b5f" width="50" height="50"
