--- a/server.html
+++ b/server.html
@@ -68,7 +68,7 @@
     <button onclick="submit();" id="cat"> </button>
     <br><br>
     <button class="button" onclick="submit();">
-        <p> Submit) </p>
+        <p> Meow) </p>
     </button>
     <div id="mess"></div>
 </body>
