--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
     <table>
         <tr>
+            <td><button onclick="window.location.href = 'https://github.com/cgsgES1A/dummy';">Graph</button>
+            </td>
+        </tr>
+        <tr>
             <td><button
                     onclick="window.location.href = 'https://cgsgES1A.github.io/mandelbrot.html';">Mandelbrot</button>
             </td>
@@ -40,6 +44,10 @@
         </tr>
         <tr>
             <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/server.html';">Server</button>
+            </td>
+        </tr>
+        <tr>
+            <td><button onclick="window.location.href = 'https://cgsgES1A.github.io/quiz2.html';">Daily quiz 2</button>
             </td>
         </tr>
     </table>
