--- a/quiz2.html
+++ b/quiz2.html
@@ -19,7 +19,7 @@
                     L[A[i]] = 0;
                 }
             }
-
+            alert(L);
             alert(L.findIndex(j => j == Math.max(L)));
         }
 
