--- a/quiz2.html
+++ b/quiz2.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Daily quiz 0</title>
+    <title>Daily quiz 2</title>
 
     <script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
 
@@ -24,7 +24,7 @@
                 if (L[j] > L[max_ind])
                     max_ind = j;
             }
-            alert(j);
+            alert(max_ind);
         }
 
         function read() {
